@@ -62,6 +62,7 @@
      * Added storage space info to api/printer
      * Added function for save file with custom name
      * Fix files not reloading when already selected for printing, but overwritten
+     * Exclude diacritic from username
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
